--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -192,7 +192,19 @@
 	        kole = 0;
 	        mela = 0;
 	      
-		question_array = ["Fråga 1: Du är på fest och har köat en låt (Olle Ljungström, Jag är apan), den spelas dock aldrig och du inser efter ett tag att din kompis istället köat halva Neutral Milk Hotels diskografi, vad gör du?","F2","F3","F4","F5","f6","f7","8","9","10","11","12"];
+		question_array = [
+			"Du är på fest och har köat en låt (Olle Ljungström, Jag är apan), den spelas dock aldrig och du inser efter ett tag att din kompis istället köat halva Neutral Milk Hotels diskografi, vad gör du?",
+			"Efter en fatal krock med en av Göteborgs många spårvagnar vaknar du upp i ett mörkt rum, en röst erbjuder dig att få födas på nytt, börja om, i en av Stockholms stadsdelar.",
+			"Du är på väg till Hemköp för att handla. Kön till kassan är lång (detta är innan självscanningens intåg) och du börjar att tappa tålamodet. Vad gör du?",
+			"En ond ande berättar att du kommer att bli strandsatt på en öde ö mitt ute i ingenstans (Öland) och bara får ta med dig en grej, vad?",
+			"Du är en snut som är på randen av att lösa hela mysteriet: Vem sköt? Vem sköts? Men precis innan det stora genombrottet blir du av med uppdraget, din chef tycker det har tagit för lång tid och gett uppdraget till din ärkerival Scott Cruz från SÄK:s mordrotel, vad gör du?",
+			"Din snurrige uppfinnare till gammelfarbror Jacques har lyckats skapa en tidsmaskin och föreslår att ni ska åka tillbaka och döda Hitler. Eftersom att du ogillar Hitler så tackar du såklart ja, vilket vapen tar du med dig?",
+			"Du är Fellini. Att vara Italiens mest uppskattade regissör medför även en del stressmoment. Efter flertal neuroser, skov och sanndrömmar måste någonting göras, vad?",
+			"Scott Cruz (han från fråga 5) säger att han har fastnat i utredningen och frågar om din hjälp med att lösa mordet. Vad gör du?",
+			"Roadtrip, vilken av Sveriges radios sändningar?",
+			"Sista frågan: Efter en fruktansvärd utekväll vaknar du upp i Slottskogen med en sprängande huvudvärk, flimmer för ögonen och en mage som vrider sig som en torktumlare. Du minns inte ens vem du är och medans du försöker samla dig inser du att de ljud av tjo-o-tjim du trodde var bakfyllehallucinationer i själva verket är Göteborgsvarvet, vad gör du?"
+		];
+	      
 		answer1_array = ["Du försöker dig på att breakdancea och hoppas att det går bra, musik är musik.",1,1,1,1,1,1,1,1,1,1,1];
 	        answer2_array = ["Du sitter kvar och lyssnar, sjunker långsamt ner i soffan tills du nästan är ett med den, det är inte så viktigt vad som spelas, i soffans famn är du trygg.",2,2,2,2,2,2,2,2,2,2,2];
 	        answer3_array = ["Du konfronterar din vän och förklarar att så gör man inte, han svarar: “Vadå då? Vem fan gillar ens Olle Ljungström”. Du hotar med stryk.",3,3,3,3,3,3,3,3,3,3,3];
