--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -207,52 +207,52 @@
 	      
 		answer1_array = [
 			"Du försöker dig på att breakdancea och hoppas att det går bra, musik är musik.",
-			1,
-			1,
-			1,
-			1,
-			1,
-			1,
-			1,
-			1,
-			1
+			"Södermalm",
+			"Du börjar småprata lite med personen före dig, ni har ett trevligt samtal och hinner till och med byta nummer.",
+			"Mina såna där skor med hjul under så jag kan glida ner för backar.",
+			"Egentligen är det ganska skönt att slippa det där ändå ganska äckliga mordet och fokusera på roligare grejer, som att bowla och snacka med pinglor.",
+			"Laserpistol, det är ändå sci-fi.",
+			"La Dolce Vita, det ljuva livet, måste vara lösningen. Din plan går ut på att uteslutande dra runt till olika halvt hemliga inneklubbar runt medelhavet i en fest som inte får ta slut.",
+			"Självklart så berättar du om allt det du kommit fram till, att hjälpa till är anledningen till att du gick med i scouterna som ung.",
+			"P3",
+			"Du går runt i publiken och hejar på, en kvinna verkar känna igen dig och du tar tillfället i akt att ta reda på vem du är egentligen."
 		];
 	        
 	        answer2_array = [
 			"Du sitter kvar och lyssnar, sjunker långsamt ner i soffan tills du nästan är ett med den, det är inte så viktigt vad som spelas, i soffans famn är du trygg.",
-			2,
-			2,
-			2,
-			2,
-			2,
-			2,
-			2,
-			2,
-			2
+			"Djurgården",
+			"Detta stillastående är ditt paradis, du är Adam och den här kön din Eva. Allt står stilla och det är fantastiskt skönt.",
+			"En bok.",
+			"Du blir helt stum, du sitter kvar och rör inte en min. Chefen tolkar dock din apati som ett ultimatum och ger dig 3 dygn.",
+			"Pistol, enklast så.",
+			"Du åker till en kurort och spenderar dagarna med att dricka mineralvatten och gå runt i linnekostym, ganska trevligt.",
+			"Du ger honom den tysta kalla handen.",
+			"P4",
+			"Allt detta ljud och ljus och spring är för mycket, du går in och gömmer dig i skogen och väntar på att allt ska gå över."
 		];
 	        answer3_array = [
-			"Du konfronterar din vän och förklarar att så gör man inte, han svarar: “Vadå då? Vem fan gillar ens Olle Ljungström”. Du hotar med stryk.",
-			3,
-			3,
-			3,
-			3,
-			3,
-			3,
-			3,
-			3,
-			3
+			`Du konfronterar din vän och förklarar att så gör man inte, han svarar: “Vadå då? Vem fan gillar ens Olle Ljungström”. Du hotar med stryk.`,
+			"Norrmalm",
+			"Nä fan, efter att ingen besvarat dina rop om att öppna en till kassa tar du tag i det och öppnar den själv. Blipp, blipp, du jobbar här nu.",
+			"Valfri CD av dödsmetallbandet Gracious Death.",
+			`Du slänger polisbrickan och pickadollen i bordet, precis som på film. Du skriker något i stil med “Då gör väl jag det själv då gubbhelvete!” Du sover inte på tre dygn. Du löser fallet.`,
+			"Bara dina händer, du tänker strypa den fan.",
+			"Att älta problem löser inget, bättre att försöka vara så produktiv som möjligt och därmed överrösta ditt inre med nya tankar.",
+			"Fan heller, först snor han din fru, sen din utredning och nu ska fanskapet få hjälp från dig, du spottar honom i ansiktet och fräser något djupt opassande.",
+			"P1",
+			"Du tänker delta, hoppar över staketet i ett enda spänstigt skutt och börjar springa, några volontärer försöker lite halvhjärtat att stoppa dig men hinner inte med. Vid Jägersdorf ger du upp."
 		];
 	        answer4_array = [
 			"Tyngden av vad som hände tillsammans med den nostalgiska musiken blir för mycket: Du börjar böla som ett barn.",
-			4,
-			4,
-			4,
-			4,
-			4,
-			4,
-			4,
-			4,
-			4
+			"Gamla stan",
+			`“Personal till kassa 2” meddelandet påminner dig om alla brustna löften, alla misstag och fall, allt det som kunnat bli men som inte blev. Du går därifrån.`,
+			"En ledsam bok.",
+			"I ett patetiskt försök till att få tillbaka allt börjar du hålla på att buga och kyssa chefens skor, men ack, du blir av med uppdraget precis som du förlorade din son i den där bilolyckan för tio år sedan.",
+			"Kniv.",
+			"Omfamna ditt själsliv och inse att livet endast är en danse macabre vid en klippkant. Om du vill undvika detta måste du onekligen göra dig själv odödlig; genom konsten.",
+			"Vad spelar de för roll, han kommer inte lösa mordet även om han får dina ledtrådar, offrets familj kommer att tvingas leva i en evig ovisshet som tar kål på dem, liksaså du, likaså Scott Cruz.",
+			"P2",
+			"En iskall känsla kryper ner längs din rygg, vilken fruktansvärd massa människor som försöker springa bort känslan av en förtryckande värld, vilka obehagliga ramsor folk sjunger, vilka skräckinjagande joggingsolglasögon de har på sig. Du går hem (vart nu det är)."
 		];
 
 		function fadeOutAndRemove(el, duration = 500) {
