--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -56,12 +56,11 @@
 			background-color: black;
 			color: white;
 			border-color: white;
-			border: 3px;
+			border-width: 3px;
 			border-radius: 10px;
 			width: 100%;
 			padding: 10px;
 			margin-bottom: 15px;
-			display: block;
 		}
 		
 		.tip{
