--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -26,6 +26,9 @@
             }
 
 		.holder{
+			border: solid;
+			border-width: thick;
+			border-color: white;
 			width: clamp(100px,95vw,400px);
 			margin: auto;
 			margin-top: 20px;
@@ -55,9 +58,6 @@
 			font-family: georgia;
 			background-color: black;
 			color: white;
-			border-color: white;
-			border-width: 3px;
-			border-radius: 10px;
 			width: 100%;
 			padding: 10px;
 			margin-bottom: 15px;
