--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -27,12 +27,14 @@
 
 		.holder{
 			border: solid;
-			border-width: thick;
+			border-width: medium;
 			border-color: white;
 			width: clamp(100px,95vw,400px);
 			margin: auto;
 			margin-top: 20px;
 			display: block;
+			padding: 20px;
+			border-radius: 10px;
 		}
 
 
