--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -62,6 +62,7 @@
 			color: white;
 			width: 100%;
 			padding: 10px;
+			margin: auto;
 			margin-bottom: 15px;
 		}
 		
@@ -95,6 +96,7 @@
 			padding: 10px;
 			display: inline-block;
 			width: 100%;
+			margin: auto;
 			margin-bottom: 15px;
 
 			
