--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -57,9 +57,10 @@
 			font-family: georgia;
 			background-color: black;
 			color: white;
-			width: 100%;
+			width: 90%;
 			margin: auto;
 			margin-bottom: 15px;
+			padding: 10px;
 		}
 		
 		.tip{
