--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -91,7 +91,7 @@
 			background-color: white;
 			border-radius: 10px;
 			padding: 10px;
-			display: inline-block;
+			display: block;
 			width: 90%;
 			margin: auto;
 			margin-bottom: 15px;
