--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -309,7 +309,7 @@
 			if(Math.abs(kole - highest) <= 1){is_kole = 1}
 			if(Math.abs(mela - highest) <= 1){is_mela = 1}
 
-			index = 8*sang + 4*fleg + 2*kole + mela;
+			index = 8*is_sang + 4*is_fleg + 2*is_kole + is_mela;
 
 			img_array = ["ingen","melankolikern","kolerikern","melakolerikern","flegmatikern","melaflegmatikern","koleflegmatikern","asangvinikern","sangvinikern","melasangvinikern","kolesangvinikern","aflegmatikern","sangflegmatikern","akolerikern","amelankolikern","jämnvikt"]
 			console.log(is_sang)
