--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -126,6 +126,10 @@
 			color: white;
 			background-color: black;
 		}
+
+		.card{
+			dispaly: none;
+		}
 		
         </style>
     </head>
@@ -181,7 +185,10 @@
 	
 	      <button id = "next" class = "next" type = "button" onclick = "next_question()">Nästa</button>
 
-	      <p id = "tip_id" class = "tip">Du måste välja nån dummer.</p>
+	      <p id = "tip_id" class = "tip">Du måste välja nåt alternativ dummer.</p>
+
+	      <img class = "card" src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Logo_BILD.svg/800px-Logo_BILD.svg.png"></img>
+	      
       </div> 
 	      
       <script>
