--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -329,7 +329,7 @@
 			
 			fadeOutAndRemove(document.getElementById("holder_id"))
 
-			document.GetElementById("resultat").style.display = "block";
+			document.getElementById("resultat").style.display = "block";
 
 		}
 	      
@@ -350,6 +350,11 @@
 					update_questions();
 				}
 				else{
+					sang += a1;
+					fleg += a2;
+					kole += a3;
+					mela += a4;
+					
 					end_quiz();
 				}
 			}
