--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -41,6 +41,7 @@
 		}
 		@keyframes fade_in_anim {
 		  0% {opacity: 0;}
+		  50% {opacity: 0;}
 		  100% {opacity: 1;}
 		}
 		@keyframes fade_in_out_anim {
@@ -332,7 +333,7 @@
 
 			var el = document.getElementById("resultat")
 			el.style.display = "block";
-		   	el.style.animation = `fade_in 2s`
+		   	el.style.animation = `fade_in_anim 4s`
 			
 			fadeOutAndRemove(document.getElementById("holder_id"))			
 
