--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -323,7 +323,7 @@
 			index = 8*is_sang + 4*is_fleg + 2*is_kole + is_mela;
 
 			img_array = ["ingen","melankolikern","kolerikern","melakolerikern","flegmatikern","melaflegmatikern","koleflegmatikern","asangvinikern","sangvinikern","melasangvinikern","kolesangvinikern","aflegmatikern","sangflegmatikern","akolerikern","amelankolikern","jämnvikt"]
-			soruce = "bilder/humoral/" + img_array[index] + ".png";
+			source = "bilder/humoral/" + img_array[index] + ".png";
 
 			var el = document.getElementById("resultat")
 			el.style.display = "block";
