--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -17,7 +17,7 @@
 		
 	    body { 
 
-         	background-color: black;
+         	background-color: #090909FF;
 
 	     	margin: 0px;
 		            padding: 0px;
@@ -56,7 +56,7 @@
 		
 		.question{
 			font-family: georgia;
-			background-color: black;
+			background-color: #090909FF;
 			color: white;
 			width: 90%;
 			margin: auto;
@@ -129,7 +129,7 @@
 		}
 
 		.card{
-			width: clamp(100px,100vw,500px);
+			width: clamp(100px,100vw,600px);
 			margin: auto;
 			display: none;
 		}
