--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
 			
+			<div id = 'main61'><script>draw_article_button('main61','placerad-i-en-frack',isMobile)</script></div>
 			<div id = 'main60'><script>draw_article_button('main60','5-band-i-obskyrheten',isMobile)</script></div>
-			<div id = 'main59'><script>draw_article_button('main59','int-isobel',isMobile)</script></div>
-			<div id = 'main58'><script>draw_article_button('main58','kents-vålnad',isMobile)</script></div>									
+			<div id = 'main59'><script>draw_article_button('main59','int-isobel',isMobile)</script></div>											
 								
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-jun-25',isMobile)</script></div>
@@ -397,6 +397,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>-->
+			<div id = 'main58'><script>draw_article_button('main58','kents-vålnad',isMobile)</script></div>	
 			<div id = 'main57'><script>draw_article_button('main57','bechdel',isMobile)</script></div>
 			<div id = 'main56'><script>draw_article_button('main56','oasen-kallebäck',isMobile)</script></div>
 			<div id = 'main55'><script>draw_article_button('main55','aladåbens-återkomst',isMobile)</script></div>	
