--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -167,7 +167,7 @@
     	</script>
 
 
-      <img src = "https://i.imgur.com/COqZ7da.png" style = "width: 100% height: auto;"></img>
+      <img src = "https://i.imgur.com/COqZ7da.png" style = "width: clamp(10px,100%,800px); height: auto;"></img>
       <p class = "question">Hur mår du? Nä trodde väl det. Det kan vara så att vätskorna är ur balans och att det påverkar ditt humör. Det finns fyra stycken som relaterar till varsitt temprament: Blod-Glädje, Slem-Slöhet, Gul galla-Ilska eller häftighet och Svart galla-Sorg. Gör quizet, bli diagnosticerad.</p>
 	    
       <div id = "holder_id" class = "holder"> 
