--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -56,9 +56,10 @@
 		.intro{
 			font-family: georgia;
 			color: white;
-			width: 90%;
+			width: clamp(100px,85%,650px);
 			margin: auto;
-			margin-bottom: 15px;
+			margin-bottom: 30px;
+			margin-top: 15px;
 			width: clamp(10px,85%,650px)
 			text-align: center;
 		}
