--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -60,7 +60,7 @@
 			margin: auto;
 			margin-bottom: 30px;
 			margin-top: 15px;
-			width: clamp(10px,85%,650px)
+			width: clamp(10px,85%,650px);
 			text-align: center;
 		}
 		
