--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -56,7 +56,7 @@
 		.intro{
 			font-family: georgia;
 			color: white;
-			width: clamp(100px,75%,650px);
+			width: clamp(100px,80vw,650px);
 			margin: auto;
 			margin-bottom: 50px;
 			margin-top: 35px;
