--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -30,7 +30,7 @@
 			margin: auto;
 			margin-top: 20px;
 			display: block;
-
+			margin-bottom: 150px;
 		}
 
 
@@ -56,11 +56,10 @@
 		.intro{
 			font-family: georgia;
 			color: white;
-			width: clamp(100px,80vw,650px);
+			width: clamp(100px,80vw,400px);
 			margin: auto;
 			margin-bottom: 50px;
 			margin-top: 45px;
-			width: clamp(10px,85%,650px);
 			text-align: center;
 		}
 		
