--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -159,6 +159,7 @@
 		  margin-top: 0px;
 		  margin-left: auto;
               	  margin-right: auto;
+		  margin-bottom: 30px;
 
 		}
         </style>
@@ -223,7 +224,7 @@
       </div> 
       <div class = "result_div" id = "resultat">
 	<img class = "card" id = "res_kort" src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Logo_BILD.svg/800px-Logo_BILD.svg.png"></img>
-      	<button class = "button" id = "share"></button>
+      	<button class = "button" id = "share">tell your friends</button>
       </div>    
       <script>
 		cur_question = 0;
