--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -197,7 +197,7 @@
 
 
       <img src = "https://i.imgur.com/COqZ7da.png" style = "display: block; width: clamp(10px,100%,800px); height: auto; margin: auto;"></img>
-      <p class = "intro">Hur mår du? Nä trodde väl det. Det kan vara så att vätskorna är ur balans och att det påverkar ditt humör. Det finns fyra stycken som relaterar till varsitt temprament: Blod-Glädje, Slem-Slöhet, Gul galla-Ilska eller häftighet och Svart galla-Sorg. Gör quizet, bli diagnosticerad.<br><br><br>§</p>
+      <p class = "intro">Hur mår du? Nä trodde väl det. Det kan vara så att vätskorna är ur balans och att det påverkar ditt humör. Det finns fyra stycken som relaterar till varsitt temprament: Blod-Glädje, Slem-Slöhet, Gul galla-Ilska eller häftighet och Svart galla-Sorg. Gör quizet, bli diagnosticerad. (Vill du göra quizet igen så ladda om sidan smarto)<br><br><br>§</p>
 	    
       <div id = "holder_id" class = "holder"> 
       
