--- a/quizhumoralpatologi.html
+++ b/quizhumoralpatologi.html
@@ -140,6 +140,7 @@
 			display: none;
 			width: clamp(100px,100vw,600px);
 			margin: auto;
+			margin-bottom: 60px;
 		}
 		.card{
 			width: 100%;
