--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			<div id="quiz"></div>
 			<script>
-			var new_html = `<a href = "quizjumoralpatologi">`
+			var new_html = `<a href = "quizhumoralpatologi">`
 			
 			new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">`
 			if(isMobile == false){
