--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 			new_html += "</a>"
 			document.getElementById("quiz").innerHTML = new_html;
 			</script>
-			<!--<div id = 'blickfång1'><script>draw_article_button('blickfång1','int-jules-and-the-vernes',isMobile)</script></div>-->
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','ballad-of-a-big-town',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -381,10 +381,10 @@
 		</div>
 		
 		<div id ='blogg_inlägg' class = blog_area>
-			<h2 style = "width: 100%;">SENASTE</h2>			
+			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main63'><script>draw_article_button('main63','ballad-of-a-big-town',isMobile)</script></div>
 			<div id = 'main62'><script>draw_article_button('main62','int-jules-and-the-vernes',isMobile)</script></div>
 			<div id = 'main61'><script>draw_article_button('main61','placerad-i-en-frack',isMobile)</script></div>
-			<div id = 'main60'><script>draw_article_button('main60','5-band-i-obskyrheten',isMobile)</script></div>
 																						
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-jun-25',isMobile)</script></div>
@@ -413,6 +413,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>-->
+			<div id = 'main60'><script>draw_article_button('main60','5-band-i-obskyrheten',isMobile)</script></div>
 			<div id = 'main59'><script>draw_article_button('main59','int-isobel',isMobile)</script></div>
 			<div id = 'main58'><script>draw_article_button('main58','kents-vålnad',isMobile)</script></div>	
 			<div id = 'main57'><script>draw_article_button('main57','bechdel',isMobile)</script></div>
