--- a/artikel.html
+++ b/artikel.html
@@ -348,12 +348,12 @@
 			wi = e_hi2+5;
 		}
 
-		 let f = ".jpg";
-		    let img_num = b_str.split(f).length - 1;
+		 f = ".jpg";
+		 img_num = b_str.split(f).length - 1;
 		    
 
 		var wi = 0
-		for (let i = 0; i < img_num; i++) {
+		for (i = 0; i < img_num; i++) {
 		  	wi = b_str.indexOf(` width:`,wi);
 			var e_wi = b_str.indexOf(`;`,wi);
 			
