--- a/index.html
+++ b/index.html
@@ -364,10 +364,10 @@
 		</div>
 		
 		<div id ='blogg_inlägg' class = blog_area>
-			<h2 style = "width: 100%;">SENASTE</h2>	
+			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main66'><script>draw_article_button('main66','om-isen-i-ölen',isMobile)</script></div>
 			<div id = 'main65'><script>draw_article_button('main65','tuppjuck',isMobile)</script></div>
 			<div id = 'main64'><script>draw_article_button('main64','casablanca-en-stat-i-en-stat',isMobile)</script></div>
-			<div id = 'main63'><script>draw_article_button('main63','ballad-of-a-big-town',isMobile)</script></div>
 																			
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-jul-25',isMobile)</script></div>
@@ -414,6 +414,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>-->
+			<div id = 'main63'><script>draw_article_button('main63','ballad-of-a-big-town',isMobile)</script></div>
 			<div id = 'main62'><script>draw_article_button('main62','int-jules-and-the-vernes',isMobile)</script></div>
 			<div id = 'main61'><script>draw_article_button('main61','placerad-i-en-frack',isMobile)</script></div>
 			<div id = 'main60'><script>draw_article_button('main60','5-band-i-obskyrheten',isMobile)</script></div>
