--- a/artikel.html
+++ b/artikel.html
@@ -240,9 +240,9 @@
 
 	  <script src = "scripts_ab.js"></script>
 	  <div style = "background: #001015FF; padding-top: 30px;">
-		<div id = 'rec1'><script>draw_article_button('rec1','kent',isMobile)</script></div>	
-		<div id = 'rec2'><script>draw_article_button('rec2','inne-ute-maj-25',isMobile)</script></div>	
-		<div id = 'rec3'><script>draw_article_button('rec3','t-shirt',isMobile)</script></div>
+		<div id = 'rec1'><script>draw_article_button('rec1','ballad-of-a-big-town',isMobile)</script></div>	
+		<div id = 'rec2'><script>draw_article_button('rec2','inne-ute-juli-25',isMobile)</script></div>	
+		<div id = 'rec3'><script>draw_article_button('rec3','casablanca-en-stat-i-en-stat',isMobile)</script></div>
 	  </div>
         </div>
 
