--- a/artikel.html
+++ b/artikel.html
@@ -246,7 +246,7 @@
 	  </div>
         </div>
 
-	<!--<script src = "script_closed.js"></script>-->
+	<script src = "script_closed.js"></script>
 	    
         <script>
         function content_of_tag(str,tag,start){
