--- a/index.html
+++ b/index.html
@@ -365,9 +365,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main71'><script>draw_article_button('main71','om-den-felplacerade-bandtischan',isMobile)</script></div>
 			<div id = 'main70'><script>draw_article_button('main70','disco-cognito',isMobile)</script></div>
 			<div id = 'main69'><script>draw_article_button('main69','vågmästaren',isMobile)</script></div>
-			<div id = 'main68'><script>draw_article_button('main68','solglasögon',isMobile)</script></div>
 																			
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-aug-25',isMobile)</script></div>
@@ -414,6 +414,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>-->
+			<div id = 'main68'><script>draw_article_button('main68','solglasögon',isMobile)</script></div>
 			<div id = 'main67'><script>draw_article_button('main67','the-room',isMobile)</script></div>
 			<div id = 'main66'><script>draw_article_button('main66','om-isen-i-ölen',isMobile)</script></div>
 			<div id = 'main65'><script>draw_article_button('main65','tuppjuck',isMobile)</script></div>
