--- a/korsord/spelare.html
+++ b/korsord/spelare.html
@@ -23,8 +23,7 @@
         <!-- Set the background colour of the document -->
         <style>
             body {
-                background: #0;
-                color: #cccccc;
+                background: black;
                 margin: 0px;
                 padding: 0px;
                 border: 0px;
@@ -116,4 +115,5 @@
 
     <!-- Custom PostBody code is injected here -->
     
+
 </html>
