--- a/korsord.html
+++ b/korsord.html
@@ -67,13 +67,13 @@
     </div>
 
     <script>
+		
 		var width = 10;
 		var height = 10;
-
-		for(var xx = 0; xx<width; xx++;){
-			for(var yy = 0;yy<height; yy++;){
-				
-			}
+		for (var x = 0; x <= width; x++) {
+		    for (var y = 0; y <= height; y++) {
+		       
+		    }
 		}
 		
     </script>
