--- a/korsord.html
+++ b/korsord.html
@@ -18,40 +18,28 @@
 		  font-family: Atkinson-Bold;
 		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
 		}
-	
-          body{
-            background: black;
-            margin: 0px;
-            padding: 0px;
-          }
-          .crossword-grid {
-            display: grid;
-            gap: 5px;
-            margin: 20px auto;
-            justify-content: center;
-            align-items: center;
-        }
-        .cell {
-            width: 20px;
-            height: 20px;
-            text-align: center;
-            font-size: 20px;
-            text-transform: uppercase;
-	    outline: none;
-	    border: none;
-	    padding: 0px;
-	    background-color: white;
-	    font-family: Atkinson-Bold;
-        }
-        .cell:focus {
-            background-color: Gainsboro;
-        }
-        .grid-container {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            align-items: center;
-        }
+		
+		 body{
+			background: black;
+			margin: 0px;
+			padding: 0px;
+		 }
+		.cell{
+			width: 40px;
+	        height: 40px;
+	        border: 1px solid #ccc;
+	        text-align: center;
+	        vertical-align: middle;
+	        line-height: 40px;
+	        font-size: 20px;
+	        background-color: #f0f0f0;
+	        cursor: pointer;
+			background-color: #f0f0f0;
+		}
+		.crossword_grid{
+			display: grid;
+		}
+			
         </style>
     </head>
     <body>
@@ -62,19 +50,25 @@
 	    
 	<script src = "script_closed.js"></script>
 
-    <div class="grid-container">
-        <div id="crossword-container" class="crossword-grid"></div>
-    </div>
+	<div id = "cgrid" class = "crossword_grid">
+		
+	</div>
 
     <script>
+		const grid = document.getElementById('cgrid');
+		var width = 10
+		var height = 10
 		
-		var width = 10;
-		var height = 10;
-		for (var x = 0; x <= width; x++) {
-		    for (var y = 0; y <= height; y++) {
-		       
-		    }
+		for(var x = 0; x < width; x++){
+			for(var y = 0; y < height; y++){
+				const cell = document.createElement('div');
+			    cell.className = 'cell';
+			    cell.contentEditable = true;
+			    cell.textContent = String.fromCharCode(65 + (i % 26)); // A-Z letters
+			    grid.appendChild(cell);
+			}
 		}
+
 		
     </script>
     </body>
