--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','solglasögon',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/inne-ute-sep',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -370,11 +370,11 @@
 			<div id = 'main69'><script>draw_article_button('main69','vågmästaren',isMobile)</script></div>
 																			
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'iul'><script>draw_article_button('iul','inne-ute-aug-25',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-sep',isMobile)</script></div>
 			<div style = "display: grid;">
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-aug-25'>AUGUSTI</a>	
 				<a class = 'artikel_knapp' href='/artikel?=inne-ute-jul-25'>JULI</a>	
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-jun-25'>JUNI</a>
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-maj-25'>MAJ</a>																					
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-jun-25'>JUNI</a>																					
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
@@ -420,7 +420,7 @@
 			<div id = 'main66'><script>draw_article_button('main66','om-isen-i-ölen',isMobile)</script></div>
 			<div id = 'main65'><script>draw_article_button('main65','tuppjuck',isMobile)</script></div>
 			<div id = 'main64'><script>draw_article_button('main64','casablanca-en-stat-i-en-stat',isMobile)</script></div>
-			<div id = 'main63'><script>draw_article_button('main63','ballad-of-a-big-town',isMobile)</script></div>
+			<div id = 'main63'><script>draw_article_button('main63','2025/ballad-of-a-big-town',isMobile)</script></div>
 			<div id = 'main62'><script>draw_article_button('main62','int-jules-and-the-vernes',isMobile)</script></div>
 			<div id = 'main61'><script>draw_article_button('main61','placerad-i-en-frack',isMobile)</script></div>
 			<div id = 'main60'><script>draw_article_button('main60','5-band-i-obskyrheten',isMobile)</script></div>
