--- a/korsord.html
+++ b/korsord.html
@@ -16,16 +16,17 @@
   </style>
 </head>
 <body>
-  <svg id="svgGrid" width="600" height="400"></svg>
-
+  <div width = "600" height = "600">
+    <svg id="svgGrid" width="600" height="600"></svg>
+  </div>
   <script>
     const svg = document.getElementById('svgGrid');
 
     // Grid settings
     const cols = 10;
-    const rows = 6;
-    const rectWidth = 50;
-    const rectHeight = 50;
+    const rows = 10;
+    const rectWidth = 600/cols;
+    const rectHeight = 600/cols;
     const padding = 10;
 
     for (let row = 0; row < rows; row++) {
