--- a/korsord.html
+++ b/korsord.html
@@ -46,7 +46,7 @@
         
         // Optional: Add custom attributes or interactivity
         rect.addEventListener("click", () => {
-          rect.setAttribute("fill", "#e74c3c"); // change color on click
+          rect.fill = black; // change color on click
         });
 
         svg.appendChild(rect);
