--- a/korsord.html
+++ b/korsord.html
@@ -46,7 +46,7 @@
         
         // Optional: Add custom attributes or interactivity
         rect.addEventListener("click", () => {
-          rect.fill = #FFFFFF; // change color on click
+          rect.setAttribute("fill", "#FFFFFF");
         });
 
         svg.appendChild(rect);
