--- a/korsord.html
+++ b/korsord.html
@@ -42,7 +42,7 @@
 
         const rect = document.createElementNS("http://www.w3.org/2000/svg", "rect");
 
-        rect.id = x.toString() + "-" + y.toString()
+        rect.id = col.toString() + "-" + row.toString()
         
         rect.setAttribute("x", x);
         rect.setAttribute("y", y);
