--- a/korsord.html
+++ b/korsord.html
@@ -61,7 +61,8 @@
     }
 
     function update_puzzle(){
-        cur_id.setAttribute("fill","#FFFFFF")
+        var current_square = document.getElementById(cur_id)
+        current_square.setAttribute("fill","#FFFFFF")
     }
     
 
