--- a/korsord.html
+++ b/korsord.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SVG Grid of Rectangles</title>
+  <title>KORSORD</title>
   <style>
     svg {
       border: 1px solid #444;
