--- a/korsord.html
+++ b/korsord.html
@@ -58,6 +58,9 @@
 
            cur_x = event.target.pos_x
            cur_y = event.target.pos_y
+
+           console.log(cur_x);
+           console.log(cur_y);
            update_puzzle()
         });
 
